--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ avatar: avatar1.jpeg
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://bstaufenbiel.github.io/bstaufenbiel/" # the base hostname & protocol for your site
+url: "https://bstaufenbiel.github.io/" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
@@ -52,5 +52,5 @@ github_url: http://github.com/bstaufenbiel
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-remote_theme: bstaufenbiel/bstaufenbiel
+theme: jekyll-theme-prologue
 collections: [sections]
