--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Midwives in England testifying in criminal court cases between 1674 and 1789.
 author: Baylee Staufenbiel
 email: bstaufenbiel@fsu.edu
-avatar: avatar1.jpeg
+avatar: avatar1.jpg
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://bstaufenbiel.github.io/" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
