--- a/_config.yml
+++ b/_config.yml
@@ -52,5 +52,5 @@ github_url: http://github.com/bstaufenbiel
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-theme: jekyll-theme-prologue
+remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
